homework/task-5: fix transaction isolation mechanism, debug test